# CANBoard_FW

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CANBoard Debug.launch  CANBoard.ioc  CMakeLists.txt  Makefile  README.md  STM32F303K8TX_FLASH.ld  analog.cpp  analog.h  analog_switch.cpp  analog_switch.h  can.cpp  can.h  canboard_config.h  digital.cpp  digital.h  main.cpp  rotary_switch.cpp  rotary_switch.h
.github/workflows/: build_firmware.yml  generate_dbc.yml
Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Core/Src/: freertos.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
Debug/: CANBoard.list  makefile  objects.list  sources.mk
Debug/Core/Src/: subdir.mk
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32F3xx_HAL_Driver/Src/: subdir.mk
boards/canboard_v2/: board.h  board.mk  port.cpp  port.h
cfg/: halconf.h  mcuconf.h
cmake/: gcc-arm-none-eabi.cmake  st-project.cmake
cmake/stm32cubemx/: CMakeLists.txt
